# neuralnetwork

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindCUDNN.cmake
include/: error_check.h  layer.h  logger.h  network.h  network_impl.h
include/gpu/: compution.cuh
include/layers/: activation.h  config.h  conv.h  dropout.h  fc.h  input.h  pool.h  softmax.h  unpool.h
include/neuralnetwork/: error_check.h  layer.h  lenet.h  logger.h  network.h  network_impl.h  readubyte.h
include/neuralnetwork/gpu/: compution.cuh
include/neuralnetwork/layers/: activation.h  config.h  conv.h  dropout.h  fc.h  input.h  pool.h  softmax.h  unpool.h
src/: layer.cpp  lenet.cpp  logger.cpp  main.cpp  network_impl.cpp  network_impl.cu  readubyte.cpp
src/gpu/: compution.cu
src/layers/: activation.cpp  conv.cpp  dropout.cpp  fc.cpp  input.cpp  pool.cpp  softmax.cpp  unpool.cpp
tools/: replace-ixblas-cublas  replace-ixdnn-cudnn
